Run tests on classpath.